# AlgorithmVisualizer

./: .gitignore  CMakeLists.txt  README.md  build.ps1  replace_quick_sort.py  rewrite_quicksort.py  test_transformer.cpp
docs/: 环境配置说明书.html
examples/sorting/: bubble_sort_example.cpp
src/: main.cpp
src/algorithms/: HeapSort.cpp  HeapSort.h  MergeSort.cpp  MergeSort.h  SortingAlgorithms.cpp  SortingAlgorithms.h
src/app/: MainWindow.cpp  MainWindow.h
src/core/: AnimationController.cpp  AnimationController.h  AstAnalyzer.cpp  AstAnalyzer.h  CodeExecutor.cpp  CodeExecutor.h  CodeInserter.cpp  CodeInserter.h
src/modes/: BeginnerMode.cpp  BeginnerMode.h  DeveloperMode.cpp  DeveloperMode.h
src/recorder/: VizEvent.h  VizRecorder.cpp  VizRecorder.h  viz_api.cpp  viz_api.h
src/resources/: code_examples.h
src/visualizers/: ArrayVisualizer.cpp  ArrayVisualizer.h  HeapVisualizer.cpp  HeapVisualizer.h
test_codes/: STL_Test_Suite.md  test_01_container_ops.cpp  test_02_emplace_at.cpp  test_03_basic_algorithms.cpp  test_04_search_algorithms.cpp  test_05_modify_algorithms.cpp  test_06_cross_array.cpp  test_07_copy_swap.cpp  test_08_comprehensive.cpp
